<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kikigames.Activitis.NewGroupActivity"
    android:id="@+id/nglayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_group"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newgroup"
        android:id="@+id/textView3"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginLeft="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_group"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignRight="@+id/editText6"
        android:layout_alignEnd="@+id/editText6"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_circle"
        android:text="@string/createbutt"
        android:id="@+id/button8"
        android:onClick="onClickCreateGroup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/imageView7"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/editText7"
        android:layout_alignStart="@+id/editText7"
        android:layout_marginTop="52dp"
        android:background="@drawable/party2"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/imageView8"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/imageView7"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7"
        android:background="@drawable/bcn"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/imageView9"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/imageView8"
        android:layout_alignLeft="@+id/imageView8"
        android:layout_alignStart="@+id/imageView8"
        android:background="@drawable/mountain"/>

    <RadioGroup
        android:layout_width="50dp"
        android:layout_height="200dp"
        android:layout_alignTop="@+id/imageView7"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:id="@+id/radiog_photo">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiop1"
        android:checked="false"
        android:layout_alignTop="@+id/imageView7"
        android:layout_toLeftOf="@+id/editText6"
        android:layout_toStartOf="@+id/editText6" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiop2"
        android:checked="false"
        android:layout_alignTop="@+id/imageView8"
        android:layout_alignLeft="@+id/radiop1"
        android:layout_alignStart="@+id/radiop1"
        android:layout_marginTop="40dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiop3"
        android:checked="false"
        android:layout_alignTop="@+id/imageView9"
        android:layout_alignLeft="@+id/radiop2"
        android:layout_alignStart="@+id/radiop2"
        android:layout_marginTop="40dp" />
    </RadioGroup>
</RelativeLayout>
